--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="root"></div>
     <script type="text/babel">
-      const APIURL = 'http://localhost:3000';
+      const APIURL = 'http://localhost:3000'; //currently hardcoded. will have to be changed
 
       class App extends React.Component{
         constructor(props){
@@ -53,15 +53,20 @@
             console.log(pic);
 
 
-
             const message = await fetch(APIURL + '/picture' + "?artist='saarthak'&professor='smallberg'", {
               method: 'POST',
-              headers: new Headers({
-                'Content-Type': 'image/png'
-              }),
               body: pic, //pic is my blob object
-              mode: 'no-cors'
             });
+
+
+            // const message = await fetch(APIURL + '/picture' + "?artist='saarthak'&professor='smallberg'", {
+            //   method: 'POST',
+            //   headers: new Headers({
+            //     'Content-Type': 'image/png'
+            //   }),
+            //   body: pic, //pic is my blob object
+            //   mode: 'no-cors'
+            // });
 
             console.log(message);
 
@@ -108,9 +113,16 @@
       class OtherWorks extends React.Component {
         constructor(props){
           super();
+          this.getImage = this.getImage.bind(this);
  
           
         }
+
+        // <button onClick={this.getImage} ></button>
+        // async getImage(){
+        //   var imageData = fetch(APIURL+'/picture/0', );
+
+        // }
 
         render(){
           { /* const getImage = async () => {
@@ -138,6 +150,7 @@
           return (
           <div className="other-works">
               <img src={APIURL + '/picture/' + '0'} />
+              
           </div>
 
           );
